# rosette

./: .gitignore  README.md
.devcontainer/: devcontainer.json
golang/: go.mod  zenoh.yml
python/: pyproject.toml
python/src/: z_sub.py
rust/: Cargo.toml
rust/src/: main.rs
scripts/: init.sh
